--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,9 @@ crc = "3.3.0"
 sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono"] }
 tokio = { version = "1.45.1", features = ["full"] }
 jsonwebtoken = "9.3.1"
+base64 = "0.22.1"
+lazy_static = "1.5.0"
+syn = "2.0.104"
+macros = { path = "macros" }
+async-trait = "0.1.88"
+uuid = { version = "1.17.0", features = ["v4", "serde"]}
